Refatoramento, Limpeza dos EditText ao inserir uma atividade, tratamento das atividades repetidas